feat: toc component

--- a/src/app/pages/touterial/touterial.component.html
+++ b/src/app/pages/touterial/touterial.component.html
@@ -1,2 +1,7 @@
-<p>touterial works!</p>
-<markdown  src="/assets/docs/tmp.md" ></markdown>
+
+<app-toc
+*ngIf="ali"
+/>
+
+<button (click)="aliClick()">ali</button>
+<markdown class="toc-content"  src="/assets/docs/tmp.md" ></markdown>
