fix: show toc on load paper

--- a/src/app/pages/touterial/touterial.component.html
+++ b/src/app/pages/touterial/touterial.component.html
@@ -1,7 +1,6 @@
+<app-toc *ngIf="ali" />
 
-<app-toc
-*ngIf="ali"
-/>
-
-<button (click)="aliClick()">ali</button>
-<markdown class="toc-content"  src="/assets/docs/tmp.md" ></markdown>
+<markdown
+  (load)="onLoad($event)"
+  src="/assets/docs/tmp.md"
+></markdown>
