fix: vhange article when menu change

--- a/src/app/pages/touterial/components/sidebar-item/sidebar-item.component.html
+++ b/src/app/pages/touterial/components/sidebar-item/sidebar-item.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="!node.children">
   <mat-list-item
-    [routerLink]="node.url"
+    (click)="loadArticle(node.url)"
     routerLinkActive="is-active"
     [routerLinkActiveOptions]="{ exact: true }"
   >
