fix: navigato to main page

--- a/src/app/pages/touterial/components/top-navigation/top-navigation.component.html
+++ b/src/app/pages/touterial/components/top-navigation/top-navigation.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
-  <span>NGRX.ir</span>
-  <span class="toolbar-item-spacer">
+  <span>
+    <a routerLink="/"> NGRX.ir </a>
   </span>
+  <span class="toolbar-item-spacer"> </span>
 
   <!-- <button mat-icon-button matTooltip="Notifications">
       <mat-icon>notifications</mat-icon>
