--- a/src/app/pages/touterial/components/toc/toc.component.html
+++ b/src/app/pages/touterial/components/toc/toc.component.html
@@ -1,12 +1,17 @@
 <!-- {{ tocList | json }} -->
-
-<ng-container *ngFor="let toc of tocList; let i = index">
-  <li
-    #tocItem
-    title="{{ toc.title }}"
-    *ngIf="toc.level !== 'h1'"
-    class="{{ toc.level }}"
-  >
-    <a [href]="toc.href" [innerHTML]="toc.content"></a>
-  </li>
-</ng-container>
+<div class="toc-container">
+  <ng-container *ngFor="let toc of tocList; let i = index">
+    <div class="header" *ngIf="toc.level === 'h1'">
+      {{ toc.title }}
+      <div class="toc-dvider"></div>
+    </div>
+    <li
+      #tocItem
+      title="{{ toc.title }}"
+      *ngIf="toc.level !== 'h1'"
+      class="{{ toc.level }}"
+    >
+      <a [href]="toc.href" [innerHTML]="toc.content"></a>
+    </li>
+  </ng-container>
+</div>
