--- a/src/app/pages/touterial/touterial.component.html
+++ b/src/app/pages/touterial/touterial.component.html
@@ -3,8 +3,10 @@
   <div
   class="content"
    content>
-    <app-toc [reload]="reloadToc" />
-    <markdown (load)="onLoad($event)"  (error)="onError($event)" [src]="articleSrc"></markdown>
+   <markdown (load)="onLoad($event)"  (error)="onError($event)" [src]="articleSrc"></markdown>
+   <div class="toc">
+     <app-toc [reload]="reloadToc" />
+   </div>
 </div>
 </app-sidebar>
 
