--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 
 <div class="landing">
   <div class="header">
-    <div (click)="navigate('docs')" class="header-item">
+    <div (click)="navigate('docs/contributing')" class="header-item">
       <span> داکیومنت </span>
     </div>
-    <div (click)="navigate('docs')" class="header-item">
+    <div (click)="navigate('docs/contributing')" class="header-item">
       <span> مشارکت </span>
     </div>
   </div>
@@ -27,7 +27,7 @@
       </div>
       <div class="action">
         <button>
-          <a routerLink="docs" >داکیومنت</a>
+          <a routerLink="docs/contributing" >داکیومنت</a>
         </button>
     </div>
   </div>
