--- a/src/app/pages/touterial/components/sidebar-item/sidebar-item.component.html
+++ b/src/app/pages/touterial/components/sidebar-item/sidebar-item.component.html
@@ -1,13 +1,16 @@
 <ng-container *ngIf="!node.children">
   <mat-list-item
-    (click)="loadArticle(node.url)"
+    [routerLink]="node.url"
+     routerLinkActive="is-active"
   >
     {{ node.title }}
   </mat-list-item>
 </ng-container>
 
 <ng-container *ngIf="node.children">
-  <mat-expansion-panel [class.mat-elevation-z0]="true">
+  <mat-expansion-panel
+  [class.mat-elevation-z0]="true"
+  >
     <mat-expansion-panel-header>
       {{ node.title }}
     </mat-expansion-panel-header>
@@ -19,44 +22,3 @@
     </mat-nav-list>
   </mat-expansion-panel>
 </ng-container>
-
-<!-- <div class="heading-container" *ngIf="!node.children">
-  <a
-    href="{{ node.url }}"
-    title="{{ node.tooltip }}"
-    class="vertical-menu-item"
-  >
-    {{ node.title }}
-  </a>
-</div>
-
-<div class="heading-container" *ngIf="node.children">
-  <a
-    *ngIf="node.url"
-    href="{{ node.url }}"
-    title="{{ node.tooltip }}"
-    class="vertical-menu-item heading"
-  >
-    <span class="node-title">{{ node.title }}</span>
-    <mat-icon class="rotating-icon" svgIcon="keyboard_arrow_right"></mat-icon>
-  </a>
-
-  <button
-    *ngIf="!node.url"
-    type="button"
-    title="{{ node.tooltip }}"
-    class="vertical-menu-item heading"
-    [attr.aria-pressed]="isExpanded"
-  >
-    <span class="node-title">{{ node.title }}</span>
-    <mat-icon class="rotating-icon" svgIcon="keyboard_arrow_right"></mat-icon>
-  </button>
-
-  <div class="heading-children">
-    <app-sidebar-item
-      *ngFor="let node of node.children"
-      [level]="level + 1"
-      [node]="node"
-    ></app-sidebar-item>
-  </div>
-</div> -->
